<resources>
    <string name="app_name">Ripetizioni</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_link">&#160;&#160;Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_link">&#160;&#160;Sign up</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="full_name">Full name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="forgot_pwd_description">Enter your email to receive a link to change your password</string>
    <string name="reset_password">Reset Password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contact_us">Contact us</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete Account</string>
    <string name="login_method_description">Metodo Login</string>
    <string name="email_sign_in">Accedi con email</string>
    <string name="login_method">Metodo Login</string>
    <string name="dimmi_un_attimo_di_te_sei">Dimmi un attimo di te: sei?</string>
    <string name="insegnante">Insegnante</string>
    <string name="studente">Studente</string>
    <string name="prenota">Prenota</string>
    <string name="orari">Orari</string>
    <string name="giorniTitolo">Giorni della settimana</string>
    <string name="cancel">cancel</string>
    <string name="ok">ok</string>
    <string name="materieInsegnateTitolo">Materie insegnate:</string>

</resources>